Fix appbar for homepage on mobile

--- a/foraging_app/static/css/index.css
+++ b/foraging_app/static/css/index.css
@@ -118,6 +118,10 @@ body {
 }
 
 @media only screen and (max-width: 640px) {
+    .map.styling {
+        height: calc(100% - 108px) !important;
+    }
+
     .desktop .groupedPageLinks {
         display: none;
     }
